added animations into website

--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <title>Shahrul's website</title>
 
     <link rel="stylesheet" href="style.css">
+    <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+  />
 </head>
 <body>
     <header class="row">
@@ -17,6 +21,9 @@
 
         <section class="column">
             <h2>Programming</h2>
+            <a href="http://coderacademy.edu.au">
+                Visit Website
+            </a>
         </section>
 
         <section class="column">
